syntax = "proto3";

package evmstorechain.evmstorechain;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "evmstorechain/evmstorechain/params.proto";
import "evmstorechain/evmstorechain/vote.proto";
import "evmstorechain/evmstorechain/blockstoragestate.proto";

option go_package = "EVMStoreChain/x/evmstorechain/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/EVMStoreChain/evmstorechain/params";
  
  }
  
  // Queries a list of Vote items.
  rpc Vote    (QueryGetVoteRequest) returns (QueryGetVoteResponse) {
    option (google.api.http).get = "/EVMStoreChain/evmstorechain/vote/{id}";
  
  }
  rpc VoteAll (QueryAllVoteRequest) returns (QueryAllVoteResponse) {
    option (google.api.http).get = "/EVMStoreChain/evmstorechain/vote";
  
  }
  
  // Queries a list of Blockstoragestate items.
  rpc Blockstoragestate    (QueryGetBlockstoragestateRequest) returns (QueryGetBlockstoragestateResponse) {
    option (google.api.http).get = "/EVMStoreChain/evmstorechain/blockstoragestate/{blocknumber}";
  
  }
  rpc BlockstoragestateAll (QueryAllBlockstoragestateRequest) returns (QueryAllBlockstoragestateResponse) {
    option (google.api.http).get = "/EVMStoreChain/evmstorechain/blockstoragestate";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetVoteRequest {
  uint64 id = 1;
}

message QueryGetVoteResponse {
  Vote Vote = 1 [(gogoproto.nullable) = false];
}

message QueryAllVoteRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllVoteResponse {
  repeated Vote                                   Vote       = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetBlockstoragestateRequest {
  string blocknumber = 1;
}

message QueryGetBlockstoragestateResponse {
  Blockstoragestate blockstoragestate = 1 [(gogoproto.nullable) = false];
}

message QueryAllBlockstoragestateRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllBlockstoragestateResponse {
  repeated Blockstoragestate                      blockstoragestate = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination        = 2;
}

